<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/album_info_cover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:importantForAccessibility="no"
            android:minWidth="250dp"
            android:minHeight="250dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <View
            android:id="@+id/divider_1"
            style="@style/default_divider"
            app:layout_constraintTop_toBottomOf="@+id/album_info_cover" />

        <TextView
            android:id="@+id/album_label"
            style="@style/base_label"
            android:text="@string/album_label"
            app:layout_constraintTop_toBottomOf="@+id/divider_1"
            tools:text="Album" />

        <TextView
            android:id="@+id/album_value"
            style="@style/base_value"
            app:layout_constraintTop_toBottomOf="@+id/divider_1"
            tools:text="Some Album" />

        <View
            android:id="@+id/divider_2"
            style="@style/default_divider"
            app:layout_constraintTop_toBottomOf="@+id/album_label" />

        <TextView
            android:id="@+id/artist_label"
            style="@style/base_label"
            android:text="@string/artist_label"
            app:layout_constraintTop_toBottomOf="@+id/divider_2"
            tools:text="Artist" />

        <TextView
            android:id="@+id/artist_value"
            style="@style/base_value"
            app:layout_constraintTop_toBottomOf="@+id/divider_2"
            tools:text="Some Artist" />

        <View
            android:id="@+id/divider_3"
            style="@style/default_divider"
            app:layout_constraintTop_toBottomOf="@+id/artist_label" />

        <TextView
            android:id="@+id/genre_label"
            style="@style/base_label"
            android:text="@string/genre_label"
            app:layout_constraintTop_toBottomOf="@+id/divider_3"
            tools:text="Genre" />

        <TextView
            android:id="@+id/genre_value"
            style="@style/base_value"
            app:layout_constraintTop_toBottomOf="@+id/divider_3"
            tools:text="Some Genre" />

        <View
            android:id="@+id/divider_4"
            style="@style/default_divider"
            app:layout_constraintTop_toBottomOf="@+id/genre_label" />

        <TextView
            android:id="@+id/date_label"
            style="@style/base_label"
            android:text="@string/date_label"
            app:layout_constraintTop_toBottomOf="@+id/divider_4"
            tools:text="Date" />

        <TextView
            android:id="@+id/date_value"
            style="@style/base_value"
            app:layout_constraintTop_toBottomOf="@+id/divider_4"
            tools:text="Some Date" />

        <View
            android:id="@+id/divider_5"
            style="@style/default_divider"
            app:layout_constraintTop_toBottomOf="@+id/date_label" />

        <Button
            android:id="@+id/open_album"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:text="@string/view_in_itunes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_5" />

        <TextView
            android:id="@+id/copyright"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:textSize="@dimen/legal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/open_album"
            tools:text="Universal Music Latino; ℗ 2019 UMG Recordings, Inc." />

    </android.support.constraint.ConstraintLayout>
</ScrollView>